# MyGIS

./: CMakeLists.txt  CMakePresets.json  Feature.cpp  Feature.h  GeoJSONLReader.cpp  GeoJSONLReader.h  GeoJSONReader.cpp  GeoJSONReader.h  GeometryDefine.h  GeometryTool.cpp  GeometryTool.h  MergeProvince.cpp  MergeProvince.h  MyGIS.cpp  MyGIS.h  VisualizerTool.cpp  VisualizerTool.h
data/: merged-provinces.json  vn.json
